Small fix for the Pinterest button on Safari

--- a/MeetGavernWP/css/wp.css
+++ b/MeetGavernWP/css/wp.css
@@ -508,7 +508,7 @@ aside.meta time span {
 }
 
 #gk-social-api > a {
-	min-height: auto;
+	min-height: inherit!important;
 }
 
 /* 5.4. Post additional features
